--- a/.github/workflows/DeployAndRun.yml
+++ b/.github/workflows/DeployAndRun.yml
@@ -6,10 +6,10 @@ env:
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]  # Commented out for future use
-    branches-ignore: ['**']  # This effectively disables the push trigger while preserving it
+    # branches: [ main ]  # Commented out for future use
+    # branches-ignore: ['**']  # This effectively disables the push trigger while preserving it
   # push:
-  #   branches: [ main ]  # Trigger for future use
+      branches: [ main ]  # Trigger for future use
 
 permissions:
   id-token: write
