--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,5 @@ python-multipart==0.0.20
 pyodbc==5.2.0
 alembic==1.16.1
 pydantic-settings==2.9.1
-bcrypt==4.3.0
 python-jose[cryptography]==3.5.0
-passlib==1.7.4
+argon2-cffi==25.1.0
