--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,24 @@
 # Ignorar todo por defecto
 **
 
-# Permitir solo lo esencial
+# Permitir archivos esenciales
 !app/**
-!start.sh
-!requirements.txt
-!Dockerfile
 !trained_models/**
 !test.db
+!alembic/**
+!alembic.ini
+!requirements.txt
+!Dockerfile
+!start.sh
 !.env
+
+# Ignorar archivos específicos aunque estén en carpetas permitidas
+**/__pycache__
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/.pytest_cache
+**/htmlcov
+**/.coverage
+**/*.backup*
+app/**/*.log
