--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,6 @@ alembic==1.16.1
 pydantic-settings==2.9.1
 python-jose[cryptography]==3.5.0
 argon2-cffi==25.1.0
+passlib==1.7.4
+shap==0.45.1
+numpy<2.0
