--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ flask_sqlalchemy==3.0.5
 sqlalchemy_filters==0.13.0
 psycopg2-binary==2.9.10
 matplotlib==3.10.1
-keras==3.9.2
-tensorflow==2.19.0
+keras==3.10.0
+tensorflow==2.20.0
 seaborn==0.13.2
 scikeras==0.13.0
 tqdm==4.67.1
@@ -21,5 +21,5 @@ pydantic-settings==2.9.1
 python-jose[cryptography]==3.5.0
 argon2-cffi==25.1.0
 passlib==1.7.4
-shap==0.45.1
-numpy<2.0
+shap==0.44.1
+numpy>=1.26.0,<2.0.0  # Compatible con Python 3.12 y SHAP
