--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Virtual Environment
 .mielia-venv/
+.miel-ia/
 venv/
 ENV/
 env/
@@ -88,3 +89,5 @@ notebooks/
 json_responses/
 previus_trainned_models/
 scripts/
+new_pass.py
+password.py
